fix: z-index sidebar

--- a/src/components/manage/Blocks/SiteHabitatsList/style.less
+++ b/src/components/manage/Blocks/SiteHabitatsList/style.less
@@ -96,7 +96,7 @@ div#view .site-habitats-list .habitats-list .ui.container > * {
       background-color: #fff !important;
 
       &.right.visible {
-        z-index: 800;
+        z-index: 2000;
         box-shadow: 0px 0px 13px -5px #000000;
       }
 
